# yuxbot

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  yuxbot.code-workspace
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/backend/: main.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0def35c0e162_use_money_and_moneymapper_for_player_.py  5d5a54a927be_drop_all_tables_and_create_them_again_.py  723dfa4628a3_create_players_table.py
src/backend/app/api/: app.py  main.py  the_api.py
src/backend/app/api/di/providers/: __init__.py  db_sess_provider.py  event_bus_provider.py  repo_provider.py  uow_factory_provider.py  uow_provider.py  use_case_provider.py
src/backend/app/api/tests/: conftest.py
src/backend/app/api/tests/integration/: test_create_clan_route.py
src/backend/app/api/v1/: __init__.py
src/backend/app/api/v1/routers/: __init__.py  clans_router.py  players_router.py
src/backend/app/api/v1/schemas/: __init__.py  clans_schema.py  players_schema.py
src/backend/app/bot/: main.py
src/backend/app/bot/cogs/: __example_cog.py
src/backend/config/: __init__.py  conf.py  config_loader.py
src/backend/infra/alembic/: env.py
src/backend/infra/db/: __init__.py  database.py
src/backend/infra/utils/: __init__.py  config_loader.py  helpers.py  lifespan.py  logging.py  traceid_middleware.py
src/backend/services/clans/domain/: events.py  exceptions.py  value_objects.py
src/backend/services/clans/domain/entities/: __init__.py  clan.py  clan_member.py
src/backend/services/clans/infra/dto/: __init__.py  clan_dto.py  clan_member_dto.py
src/backend/services/clans/infra/mappers/: __init__.py  clan_mapper.py  clan_member_mapper.py  clan_name_mapper.py  clan_tag_mapper.py
src/backend/services/clans/infra/models/: __init__.py  clan.py  clan_member.py
src/backend/services/clans/infra/services/: __init__.py  clan_service.py
src/backend/services/clans/ports/: __init__.py  base_clan_service.py  clan_member_repo.py  clan_repo.py  clan_uow.py
src/backend/services/clans/tests/: conftest.py
src/backend/services/clans/use_cases/: __init__.py  create_clan_uc.py
src/backend/services/players/domain/: events.py  exceptions.py  value_objects.py
src/backend/services/players/domain/entities/: player.py
src/backend/services/players/infra/dto/: __init__.py  player_dto.py
src/backend/services/players/infra/mappers/: __init__.py  player_mapper.py
src/backend/services/players/ports/: __init__.py  base_player_service.py  player_repo.py  player_uow.py
src/backend/services/players/tests/: conftest.py
src/backend/services/players/use_cases/: __init__.py  create_player_uc.py  get_player_uc.py
src/backend/shared/db/: database.py
src/backend/shared/domain/: __init__.py  aggregate.py  domain_event.py  entity.py
src/backend/shared/events/: __init__.py  event_buses.py
src/backend/shared/infra/dto/: __init__.py  base_response_dto.py
src/backend/shared/infra/events/: __init__.py  inm_event_bus.py
src/backend/shared/infra/units_of_work/: __init__.py  inm_storage.py  inm_uow.py  sqlal_uow.py
src/backend/shared/ports/: __init__.py  base_aggregate.py  base_entity.py  base_event_bus.py  base_uow.py  base_use_case.py  event_bus.py  uow.py  use_case.py
src/backend/shared/utils/: __init__.py  base.py  database.py  lifespan.py  redis.py
src/backend/tests/: test_filler.py
src/backend/tests/unit/clans/: conftest.py
src/backend/tests/unit/players/: conftest.py
src/backend/utils/: lifespan.py  redis.py
(+39 files in other folders)
