[project]
name = "yuxbot"
version = "0.1.0"
description = "an intimidating asynchronous MMORPG game in Discord - build your Empire!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "discord-py>=2.6.4",
    "dishka>=1.7.2",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.128.0",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
]
[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "dpytest>=0.7.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
prod = [
    "gunicorn>=25.0.3",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
exclude = [
    "frontend",
    "*/alembic/*"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "E",  # pycodestyle (errors)
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade (современный синтаксис)
    "B",  # flake8-bugbear (дополнительные проверки)
    "C4", # flake8-comprehensions
    "A",  # flake8-builtins (не переопределять встроенные имена)
]
ignore = [
    "E501",
    "ANN401",
    "F403", "F405",
    "B008"
]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_configs = true
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_untyped_decorators = false
ignore_missing_imports = true
disallow_subclassing_any = false
explicit_package_bases = true
exclude = [
    "^src/backend/infra/alembic/"
]

[tool.pytest.ini_options]
addopts = "-v" #  --cov=src/backend --cov-report=html
testpaths = [
    "src/backend/services/clans/tests",
    "src/backend/services/players/tests",
]
pythonpath = ["."]
asyncio_mode = "auto"
